--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,20 @@
-asgiref
-Django
-django-jalali-date
-django-render-partial
-jdatetime
-Pillow
-pytz
-sorl-thumbnail
-sqlparse
-typing-extensions
+asgiref==3.10.0
+beautifulsoup4==4.14.3
+certifi==2025.11.12
+charset-normalizer==3.4.4
+Django==5.2.8
+django-jalali-date==2.0.0
+django-render-partial==0.4
+idna==3.11
+jalali_core==1.0.0
+jdatetime==5.2.0
+pillow==12.0.0
+pytz==2025.2
+requests==2.32.5
+setuptools==80.9.0
+sorl-thumbnail==12.11.0
+soupsieve==2.8
+sqlparse==0.5.3
+typing_extensions==4.15.0
+tzdata==2025.2
+urllib3==2.6.0
